Fixed browswer config color, button spacing, and carousel text spacing

--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -35,7 +35,7 @@
 /* Media Query */
 @media (max-width: 768px) {
   .main-button {
-    font-size: 0.8rem;
+    font-size: 0.75rem;
     padding: 12px 18px;
     margin-right: 0px;
   }
